Try to fix the ios safari overflow problem

--- a/src/styles.css
+++ b/src/styles.css
@@ -1,9 +1,12 @@
 html {
+  height: 100%;
+  overflow-y: hidden;
   font-family: Rubik, Arial, sans-serif;
 }
 
 body {
   margin: 0px;
+  height: 100%;
   overflow-y: hidden;
   color: rgb(105, 105, 105);
   background: rgb(211, 211, 211);
